--- a/wnitWebSite/indextest.html
+++ b/wnitWebSite/indextest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="כוח הכבידע" content="width=device-width, initial-scale=1">
     <title>כוח הכבידע</title>
     <meta name="description" content="כוח הכבידע" />
     <meta name="keywords" content="" />
