--- a/wnitWebSite/indextest.html
+++ b/wnitWebSite/indextest.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="כוח הכבידע" content="width=device-width, initial-scale=1">
     <title>כוח הכבידע</title>
+    <link rel="icon" type="image/x-icon" href="https://alumappel.github.io/powerOfKnowledge/powerOfKnowledgeFabicon.png">
     <meta name="description" content="כוח הכבידע" />
     <meta name="keywords" content="" />
     <meta name="author" content="names" />
