--- a/wnitWebSite/indextest.html
+++ b/wnitWebSite/indextest.html
@@ -43,7 +43,7 @@
 
 
         <div id="gameArea" class="">
-            <!--src = הקישור של דף המשחק שלכם (לא קובץ האנימייט)-->
+            <!--src =tt הקישור של דף המשחק שלכם (לא קובץ האנימייט)-->
             <iframe id="gameIframe" src="https://alumappel.github.io/powerOfKnowledge/final_wnit/WNITWithSound.html" frameBorder="0" allowfullscreen="">Browser not compatible.</iframe>
         </div>
       
