--- a/wnitWebSite/indextest.html
+++ b/wnitWebSite/indextest.html
@@ -44,7 +44,7 @@
 
         <div id="gameArea" class="">
             <!--src =tt הקישור של דף המשחק שלכם (לא קובץ האנימייט)-->
-            <iframe id="gameIframe" src="https://alumappel.github.io/powerOfKnowledge/final_wnit/WNITWithSound.html" frameBorder="0" allowfullscreen="">Browser not compatible.</iframe>
+            <iframe id="gameIframe" src="https://alumappel.github.io/powerOfKnowledge/the game final_wnit/WNITWithSound.html" frameBorder="0" allowfullscreen="">Browser not compatible.</iframe>
         </div>
       
 
